--- a/app/src/main/res/layout/dialog_input_description.xml
+++ b/app/src/main/res/layout/dialog_input_description.xml
@@ -13,31 +13,18 @@
         android:paddingVertical="10dp">
 
         <EditText
-            android:id="@+id/editLevelId"
-            android:layout_width="318dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:ems="10"
-            android:hint="ID"
-            android:inputType="text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="HardcodedText" />
-
-        <EditText
             android:id="@+id/editTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
             android:ems="10"
             android:hint="Title"
             android:inputType="text"
-            app:layout_constraintEnd_toEndOf="@+id/editLevelId"
-            app:layout_constraintStart_toStartOf="@+id/editLevelId"
-            app:layout_constraintTop_toBottomOf="@+id/editLevelId"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView12"
             tools:ignore="HardcodedText" />
 
         <EditText
@@ -71,11 +58,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Submit"
+            android:text="Update"
             app:layout_constraintEnd_toEndOf="@+id/editCreator"
             app:layout_constraintStart_toStartOf="@+id/editCreator"
             app:layout_constraintTop_toBottomOf="@+id/editCreator"
             tools:ignore="HardcodedText" />
+
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:text="Question:"
+            android:textColor="#7E57C2"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
