--- a/app/src/main/res/layout/dialog_share_qrcode.xml
+++ b/app/src/main/res/layout/dialog_share_qrcode.xml
@@ -26,7 +26,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/terka_box" />
+                app:srcCompat="@drawable/terka_bg_img" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
