--- a/app/src/main/res/layout/dialog_login.xml
+++ b/app/src/main/res/layout/dialog_login.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -27,9 +28,11 @@
                 android:ems="10"
                 android:hint="username"
                 android:inputType="text"
+                android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="HardcodedText" />
 
             <EditText
                 android:id="@+id/editPassword"
@@ -39,9 +42,11 @@
                 android:ems="10"
                 android:hint="password"
                 android:inputType="textPassword"
+                android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="@+id/editUser"
                 app:layout_constraintStart_toStartOf="@+id/editUser"
-                app:layout_constraintTop_toBottomOf="@+id/editUser" />
+                app:layout_constraintTop_toBottomOf="@+id/editUser"
+                tools:ignore="HardcodedText" />
 
             <Button
                 android:id="@+id/btnLogin"
@@ -50,8 +55,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="Sign In"
+                android:visibility="visible"
                 app:layout_constraintStart_toStartOf="@+id/editPassword"
-                app:layout_constraintTop_toBottomOf="@+id/editPassword" />
+                app:layout_constraintTop_toBottomOf="@+id/editPassword"
+                tools:ignore="HardcodedText"
+                tools:visibility="visible" />
 
             <Button
                 android:id="@+id/btnLoginGuest"
@@ -60,9 +68,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="Sign In As Guest"
+                android:visibility="visible"
                 app:icon="@drawable/user_secret_solid"
                 app:layout_constraintEnd_toEndOf="@+id/editPassword"
-                app:layout_constraintTop_toBottomOf="@+id/editPassword" />
+                app:layout_constraintTop_toBottomOf="@+id/editPassword"
+                tools:ignore="HardcodedText"
+                tools:visibility="visible" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
@@ -71,10 +82,11 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
         android:layout_marginTop="52dp"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/terka_no_bg" />
+        app:srcCompat="@drawable/terka_banner"
+        tools:visibility="visible" />
 </androidx.constraintlayout.widget.ConstraintLayout>
