--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -70,7 +70,8 @@
             android:layout_width="80sp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:background="@drawable/button_image_disable"
+            android:textColor="@color/button_text"
+            android:background="@drawable/tabs_disable_shape"
             android:gravity="center"
             android:text="Category"
             android:textSize="14sp"
